# voronoi3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml
LICENSES/: VORO_PLUSPLUS
cpp/bindings/: py_module.cpp
cpp/cmake/: voro_sources.cmake
cpp/containers/: box_container.hpp  triclinic_pbc.hpp
cpp/core/: bindings.cpp  cell_builder.hpp  config.hpp  lattice.hpp  lebedev.hpp  mesh_builder.hpp  neighbor.hpp  plane.hpp  polyhedron.hpp  tessellate.hpp  tessellate_caps.hpp  vec.hpp
cpp/shims/: voro_wl_wrapper.cc
python/: requirements-dev.txt
python/voronoi3d/: __init__.py  policy.py
scripts/: quickstart.ps1  voronoi3d_macos_setup.sh  voronoi3d_ubuntu_setup.sh  voronoi3d_win_setup.ps1
tests/: test_smoke.py
tests/py/: test_caps_order_effect.py  test_caps_single_atom.py  test_global_mesh.py  test_pbc_volume.py  test_plan_neighbors.py  test_tessellation_basic.py
