[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12", "numpy>=1.23", "setuptools>=68", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "voronoi3d"
version = "0.0.1"
description = "Cell-based 3D Voronoi tessellation with pairwise plane placement (voro++ fork)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ivan Yu. Chernyshov", email = "ivan.chernyshoff@gmail.com" }]
maintainers = [{ name = "Ivan Yu. Chernyshov", email = "ivan.chernyshoff@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dependencies = [
  "numpy>=1.23,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.scikit-build]
build.verbose = true
wheel.packages = ["python/voronoi3d"]
sdist.include = [
  "cpp/**",
  "python/**",
  "CMakeLists.txt",
  "README.md",
  "LICENSE",
  "LICENSES/**",
  "THIRD_PARTY.md",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *_i686 *musllinux*"
test-command = "pytest -q"
test-extras = ""
test-requires = ["pytest"]
manylinux-x86_64-image = "manylinux_2_28"
